--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=demo
 spring.devtools.restart.poll-interval=500ms
 spring.devtools.restart.quiet-period=200ms
+management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoint.prometheus.enabled=true
+
