--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
           docker push tannguyen012/spring-boot-image:latest
 
       - name: Deploy to server 
-        uses: appleboy/ssh-action@v1.0.3
+        uses: appleboy/ssh-action@master
         with: 
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USER }}
